--- a/playpart.html
+++ b/playpart.html
@@ -5,43 +5,43 @@
     </head>
     <body>
         <h1>SrikanthBoppudi acts in a play</h1>
-        <h3>Title: The Master Builder Author: Henrik Ibsen</h3>
+        <h3>Title: The Master Builder<br> Author: Henrik Ibsen</h3>
           <p>
-            HILDA.
-
-Ah--here one can sit and sun oneself like a cat.
-
-
-MRS. SOLNESS.
-
-[Lays her hand softly on HILDA'S neck.] It is nice of you to be willing
-to sit with me. I thought you wanted to go in to my husband.
+            <h3>HILDA.</h3><br>
+            
+            Ah--here one can sit and sun oneself like a cat.<br>
 
 
-HILDA.
+            <h3>MRS. SOLNESS.</h3><br>
 
-What should I want with him?
-
-
-MRS. SOLNESS.
-
-To help him, I thought.
+            [Lays her hand softly on HILDA'S neck.] It is nice of you to be willing
+            to sit with me. I thought you wanted to go in to my husband.<br>
 
 
-HILDA.
+            <h3>HILDA.</h3><br>
 
-No, thank you. And besides, he is not in. He is over there with his
-workmen. But he looked so fierce that I did not dare to talk to him.
-
-
-MRS. SOLNESS.
-
-He is so kind and gentle in reality.
+            What should I want with him?<br>
 
 
-HILDA.
+            <h3>MRS. SOLNESS.</h3><br>
 
-He!
+             To help him, I thought.<br>
+
+
+            <h3>HILDA.</h3><br>
+
+             No, thank you. And besides, he is not in. He is over there with his
+             workmen. But he looked so fierce that I did not dare to talk to him.<br>
+
+
+            <h3>MRS. SOLNESS.</h3><br>
+
+            He is so kind and gentle in reality.<br>
+
+
+             <h3>HILDA.</h3><br>
+
+              He!<br>
 
 
           </p>
