--- a/playpart.html
+++ b/playpart.html
@@ -13,10 +13,11 @@
             </p>
 
             <h3>MRS. SOLNESS.</h3><br>
-            <p>
-            [Lays her hand softly on HILDA'S neck.] It is nice of you to be willing
+          <p>
+            <p>[Lays her hand softly on HILDA'S neck.]<br></p>
+            It is nice of you to be willing
             to sit with me. I thought you wanted to go in to my husband.<br>
-             </p>
+          </p>
 
             <h3>HILDA.</h3><br>
             <p>
