--- a/playpart.html
+++ b/playpart.html
@@ -8,44 +8,46 @@
         <h1>SrikanthBoppudi acts in a play</h1>
         <h3>Title: The Master Builder<br> Author: Henrik Ibsen</h3>
           <p>
-            <h3 class="class1">HILDA.</h3><br>
+            <h3 class="name_hilda">HILDA.</h3><br>
             <p class="speech">
             Ah--here one can sit and sun oneself like a cat.<br>
             </p>
 
-            <h3 class="class2">MRS. SOLNESS.</h3><br>
+            <h3 class="name_solness">MRS. SOLNESS.</h3><br>
             <p class="direction">[Lays her hand softly on HILDA'S neck.]<br></p>
             <p class = "speech">
             It is nice of you to be willing
             to sit with me. I thought you wanted to go in to my husband.<br>
             </p>
 
-            <h3 class="class1" > HILDA.</h3><br>
+            <h3 class="name_hilda" > HILDA.</h3><br>
             <p class="speech">
             What should I want with him?<br>
             </p>
 
-            <h3 class="class2">MRS. SOLNESS.</h3><br>
+            <h3 class="name_solness">MRS. SOLNESS.</h3><br>
              <p class="speech">
              To help him, I thought.<br>
               </p>
 
-            <h3 class="class1">HILDA.</h3><br>
+            <h3 class="name_hilda">HILDA.</h3><br>
              <p class="speech">
              No, thank you. And besides, he is not in. He is over there with his
              workmen. But he looked so fierce that I did not dare to talk to him.<br>
              </p>
 
-            <h3 class="class2">MRS. SOLNESS.</h3><br>
+            <h3 class="name_solness">MRS. SOLNESS.</h3><br>
              <p class="speech">
             He is so kind and gentle in reality.<br>
              </p>
 
-             <h3 class="class1">HILDA.</h3><br>
+             <h3 class="name_hilda">HILDA.</h3><br>
              <p class="speech">
               He!<br>
              </p>
 
           </p>
+          <table class="class"
+
     </body>
 </html>
