--- a/playpart.html
+++ b/playpart.html
@@ -47,7 +47,23 @@
              </p>
 
           </p>
-          <table class="class"
+          <table class="class">
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>kabali</td>
+                <td>rajinikanth</td>
+                <td>balakrishna</td>
+            </tr>
+            <tr>
+               <td>kaidhi</td>
+               <td>chiranjeevi</td>
+               <td>ntr</td>
+            </tr>
+          </table>
 
     </body>
 </html>
