--- a/playpart.html
+++ b/playpart.html
@@ -64,6 +64,6 @@
                <td>ntr</td>
             </tr>
           </table>
-
+         <a href=extra.html>link to extra.html</a>
     </body>
 </html>
