--- a/playpart.html
+++ b/playpart.html
@@ -47,7 +47,7 @@
              </p>
 
           </p>
-          <table class="class">
+          <table border="1" class="class">
             <tr>
                 <th>Character</th>
                 <th>Actor</th>
@@ -64,6 +64,6 @@
                <td>ntr</td>
             </tr>
           </table>
-         <a href=extra.html>link to extra.html</a>
+         <a href=secondact.html>link to extra.html</a>
     </body>
 </html>
