--- a/playpart.html
+++ b/playpart.html
@@ -65,5 +65,11 @@
             </tr>
           </table>
          <a href=secondact.html>link to extra.html</a>
+         <br><br><br>
+
+         <div class = "bonus">
+          <a href="playpart.html">Home</a>
+          <a href="secondact.html">NEXT</a>
+     </div>
     </body>
 </html>
