--- a/secondact.html
+++ b/secondact.html
@@ -27,5 +27,10 @@
          Oh, not just on that account, surely?<br>
         </p>
         <a href=playpart.html>link to playpart.html</a>
+
+        <div class = "bonus">
+            <a href="playpart.html">Home</a>
+            <a href="secondact.html">NEXT</a>
+       </div>
     </body>
 </html>
