--- a/secondact.html
+++ b/secondact.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="ibsen.css">
+        <script src="https://kit.fontawesome.com/61a3d7f796.js" crossorigin="anonymous"></script>
         <title>a smidgeon more</title>
     </head>
     <body>
@@ -28,8 +29,8 @@
         </p>
         <a href=playpart.html>link to playpart.html</a>
         <div class = "bonus">
-            <a href="playpart.html">Home</a>
-            <a href="secondact.html">NEXT</a>
+            <a href="playpart.html"><i class="fa-solid fa-home">playpart</i></a>
+            <a href="secondact.html"><i class="fa-solid fa-arrow-left">secondact</i></a>
        </div>
     </body>
 </html>
