--- a/playpart.html
+++ b/playpart.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="ibsen.css">
+        <script src="https://kit.fontawesome.com/61a3d7f796.js" crossorigin="anonymous"></script>
         <title>Arts</title>
     </head>
     <body>
@@ -67,8 +68,8 @@
          <a href=secondact.html>link to extra.html</a>
          <br><br><br>
          <div class = "bonus">
-          <a href="playpart.html">Home</a>
-          <a href="secondact.html">NEXT</a>
+          <a href="playpart.html"><i class="fa-solid fa-home">playpart</i></a>
+          <a href="secondact.html"><i class="fa-solid fa-arrow-left">secondact</i></a>
      </div>
     </body>
 </html>
