--- a/playpart.html
+++ b/playpart.html
@@ -65,7 +65,7 @@
                <td>ntr</td>
             </tr>
           </table>
-         <a href=secondact.html>link to extra.html</a>
+         <a href=secondact.html>link to secondact.html</a>
          <br><br><br>
          <div class = "bonus">
           <a href="playpart.html"><i class="fa-solid fa-home">playpart</i></a>
